# fermat-mcp

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mcp_config.json  pyproject.toml  server.py  setup  setup.sh  smithery.yaml
.github/workflows/: ruff.yml
fmcp/mpl_mcp/: server.py
fmcp/mpl_mcp/core/: bar_chart.py  eqn_chart.py  plot_chart.py  scatter_chart.py  stack_chart.py  stem_chart.py
fmcp/numpy_mcp/: registration.py  server.py
fmcp/numpy_mcp/core/: math_functions.py  matlib.py  numerical_operation.py
fmcp/sympy_mcp/: server.py
fmcp/sympy_mcp/core/: algebra.py  calculus.py  equations.py  matrices.py
test/: test_server.py
test/test_mpl/: test_bar_chart.py  test_eqn_chart.py  test_plot_chart.py  test_scatter_chart.py  test_stack_chart.py  test_stem_chart.py
test/test_numpy/: test_numerical_operation.py
