[project]
name = "fermat-mcp"
version = "0.1.0"
description = "MCP Server for mathematical compuation and plotting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "sympy>=1.14.0",
]
