[project]
name = "fermat-mcp"
version = "0.1.0"
description = "MCP Server for mathematical computation and plotting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fmcp"]  # Explicitly include only the main package

# 🧼 Ruff (linter)
[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E501", "F403", "F405", "E902"]
lint.fixable = ["ALL"]
lint.unfixable = []
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "venv"
]

# 🧱 Black (formatter)
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
